--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
+    "deploy": "gatsby build && gh-pages -d public -b deploy",
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
@@ -15,8 +16,9 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.24.7",
     "gatsby-theme-blog": "^4.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "gh-pages": "^6.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "theme-ui": "0.14.7"
   }
 }
